sql/sql_table.cc
@@ -3471,7 +3471,8 @@ mysql_prepare_create_table(THD *thd, HA_CREATE_INFO *create_info,
     }
 
     /* The user specified fields: check that structure is ok */
-    if (check_sequence_fields(thd->lex, &alter_info->create_list))
+    if (check_sequence_fields(thd->lex, &alter_info->create_list,
+                              db, table_name))
       DBUG_RETURN(TRUE);
   }
 
